[package]
name = "pixel8bit"
version = "0.1.0"
edition = "2021"
authors = ["Marco Perini <marco@perini.dev>"]
description = "A Rust library for applying 8-bit pixelation effects with symmetry detection and mirroring."
license = "MIT"
repository = "https://github.com/PeriniM/pixel8bit"
keywords = ["image", "8-bit", "pixelation", "symmetry"]
categories = ["graphics", "image"]

[dependencies]
image = "0.24"
